Theming: more tweaks

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -72,7 +72,7 @@
 }
 
 .shopbar-button {
-    color: $body-color;
+    color: $body-color !important;
     min-width: 60px;
 
     .shopbar-button-icon {
