Search: Minor improvements

--- a/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
@@ -24,7 +24,7 @@
 		{
 			<li class="active-filter-item" data-key="@filter.Key" data-group="@filter.FacetGroup.Key">
 				<a class="btn btn-grey btn-sm active-filter-link" href='@Url.FacetRemove(filter)' title="@T("Search.Facet.RemoveFilter", filter.FacetGroup.Label, filter.Value.Label)">
-					<span class="active-filter-label">@filter.Value.Label</span>
+					<span class="active-filter-label">@(filter.Value.Label ?? filter.Value.ToString())</span>
 				</a>
 			</li>
 		}
