Theming: display user name in menubar when signed in

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -207,6 +207,7 @@
 }
 
 .menubar-link:hover,
+.menubar-link:active,
 .open .menubar-link {
     background-color: #f5f5f5;
     color: $body-color;
