Theming: better offcanvas panning behaviour

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
@@ -242,3 +242,12 @@ body.canvas-blocking .canvas-blocker {
         }
     }
 }
+
+
+/* LAYOUT OVERRIDES
+--------------------------------------------*/
+
+.canvas-overlay {
+    .page-main      { box-shadow: none; }
+    .canvas-blocker { width: 200%; left: -50% }
+}
