--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
@@ -43,7 +43,7 @@
 				</span>
 				<span class="shopbar-button-label">
 					<span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
-					<span style="font-weight: bold; color: #333">@T("Common.Shopbar.CompareProductsPartTwo")</span>
+					<strong>@T("Common.Shopbar.CompareProductsPartTwo")</strong>
 				</span>
 				<span class="shopbar-button-label-sm">
 					@T("Common.Shopbar.Compare")
@@ -63,7 +63,7 @@
 				</span>
 				<span class="shopbar-button-label">
 					<span>@T("Common.Shopbar.WishlistPartOne")</span><br />
-					<span style="font-weight: bold; color: #333">@T("Common.Shopbar.WishlistPartTwo")</span>
+					<strong>@T("Common.Shopbar.WishlistPartTwo")</strong>
 				</span>
 				<span class="shopbar-button-label-sm">
 					@T("Wishlist")
@@ -84,8 +84,8 @@
 					</span>
 				</span>
 				<span class="shopbar-button-label">
-					<span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span><br />
-					<span style="font-weight: bold; color: #333">@T("Common.Shopbar.Basket")</span>
+					<span>@T("Common.Shopbar.BasketPartOne")</span><br />
+					<strong>@T("Common.Shopbar.BasketPartTwo")</strong>
 				</span>
 				<span class="shopbar-button-label-sm">
 					@T("Common.Shopbar.Basket")
