--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
@@ -76,7 +76,7 @@
 	{
 		<div class="btn-group">
 			<button type="button" class="btn btn-warning btn-lg btn-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<i class="fa fa-@miscActions.First().Value["icon"]"></i>
+				<i class="@miscActions.First().Value["icon"]"></i>
 			</button>
 			<div class="dropdown-menu dropdown-menu-right">
 				@foreach (var kvp in miscActions)
