--- a/src/Plugins/SmartStore.DevTools/Views/MyCheckout/MyBillingAddress.cshtml
+++ b/src/Plugins/SmartStore.DevTools/Views/MyCheckout/MyBillingAddress.cshtml
@@ -11,8 +11,9 @@
 	Html.AddTitleParts(T("PageTitle.Checkout").Text);
 }
 
-@section orderProgress{
-	@{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address, area = "" }); }
+@using (Html.BeginZoneContent("orderProgress"))
+{
+	@Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address, area = "" })
 }
 
 <h1>Hallo Welt</h1>
