Theming: some cleanup

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1538,7 +1538,7 @@ table.payment-method-features td {
 		font-weight: bold;
 		max-width: 300px;
 		display: inline-block;
-		.ellipsis();
+		.text-overflow();
 	}
 }
 
@@ -1590,7 +1590,7 @@ table.payment-method-features td {
 	font-size: 0.9em;
 }
 .mapping-list-item {
-	.ellipsis();
+	.text-overflow();
 }
 
 .column-mapping {
