--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -48,7 +48,7 @@
 		jsRoot + "smartstore.touchevents.js",
 		jsRoot + "smartstore.jquery.utils.js",
 		jsRoot + "jquery.ba-outside-events.js",
-		jsRoot + "jquery.transit.js",
+		//jsRoot + "jquery.transit.js",
 		jsRoot + "smartstore.doAjax.js",
 		jsRoot + "jquery.addeasing.js",
 		jsRoot + "smartstore.eventbroker.js",
