--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -38,24 +38,11 @@
 
     <div class="offcanvas-menu-footer hidden-xs-up">
         <div class="row xs-gutters justify-content-around flex-nowrap">
-            <div class="col-xs hidden-xs-up">
-                <div id="ocm-currency-selector" class="mf-dropdown">
-                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left text-uppercase">
-                        <span data-bind="name"></span>
-                        <b><i class="fa fa-caret-down"></i></b>
-                    </button>
-                    <select class="form-control noskin"></select>
-                </div>
+            <div id="ocm-currency-selector" class="col-xs hidden-xs-up">
+                <select class="form-control skin" style="width:100%"></select>
             </div>
-                
-            <div class="col-xs hidden-xs-up">
-                <div id="ocm-language-selector" class="mf-dropdown">
-                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left text-uppercase">
-                        <span data-bind="name"></span>
-                        <b><i class="fa fa-caret-down"></i></b>
-                    </button>
-                    <select class="form-control noskin"></select>
-                </div>
+            <div id="ocm-language-selector" class="col-xs hidden-xs-up">
+                <select class="form-control skin"></select>
             </div>
         </div>
     </div>
