--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/select2/scss/core.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/select2/scss/core.scss
@@ -6,11 +6,11 @@
   position: relative;
   vertical-align: middle;
 
-  @import "single";
-  @import "multiple";
+  @import "_single.scss";
+  @import "_multiple.scss";
 }
 
-@import "dropdown";
+@import "_dropdown.scss";
 
 .select2-close-mask {
   border: 0;
@@ -43,3 +43,4 @@
   position: absolute !important;
   width: 1px !important;
 }
+
