Revert "Replaced section orderProgress with corresponding zone in plugins"
This reverts commit e48f0db670e4c73170869785051d1e6f95c95282.

--- a/src/Plugins/SmartStore.DevTools/Views/MyCheckout/MyBillingAddress.cshtml
+++ b/src/Plugins/SmartStore.DevTools/Views/MyCheckout/MyBillingAddress.cshtml
@@ -11,9 +11,8 @@
 	Html.AddTitleParts(T("PageTitle.Checkout").Text);
 }
 
-@using (Html.BeginZoneContent("orderProgress"))
-{
-	@Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address, area = "" })
+@section orderProgress{
+	@{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address, area = "" }); }
 }
 
 <h1>Hallo Welt</h1>
