--- a/src/Presentation/SmartStore.Web/Views/Topic/TopicDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Topic/TopicDetails.cshtml
@@ -1,22 +1,22 @@
 ﻿@model TopicModel
 @using SmartStore.Web.Models.Topics;
 @{
-	var isPopup = ViewBag.IsPopup;
-	if (isPopup == null || isPopup == false)
-	{
-		Layout = "_Layout";
-	}
-	else
-	{
-		Layout = "_Layout.Popup";
-	}
+    var isPopup = ViewBag.IsPopup;
+    if (isPopup == null || isPopup == false)
+    {
+        Layout = "_Layout";
+    }
+    else
+    {
+        Layout = "_Layout.Popup.cshtml";
+    }
 
-	if (!Model.IsPasswordProtected)
-	{
-		Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Title);
-		Html.AddMetaDescriptionParts(Model.MetaDescription);
-		Html.AddMetaKeywordParts(Model.MetaKeywords);
-	}
+    if (!Model.IsPasswordProtected)
+    {
+        Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Title);
+        Html.AddMetaDescriptionParts(Model.MetaDescription);
+        Html.AddMetaKeywordParts(Model.MetaKeywords);
+    }
 }
 @if (Model.IsPasswordProtected)
 {
