Fixed minor Bootstrap 4 upgrade issues

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -239,7 +239,7 @@ $ocm-horizontal-padding:                1.6rem;
         padding-left: 2.75rem;
         font-size: 1rem;
 
-        span:not(.label) {
+        span:not(.badge) {
             padding-left: 0;
         }
     }
