--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
@@ -227,7 +227,7 @@ body.canvas-blocking .canvas-blocker {
             color: $brand-warning !important;
         }
 
-        .label {
+        .badge {
             position: relative;
             right: 0;
             top: 0;
