--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -24,8 +24,8 @@
 
         @if (catalogSettings.SortManufacturersAlphabetically)
         {
-            <div class="manufacturer-nav clearfix">
-                <ul class="nav navbar-nav">
+            <div class="manufacturer-nav">
+                <ul class="navbar justify-content-start list-unstyled">
                     
                     @if (numericList.Count() > 0)
                     {
