Extends store depending setting helper to support partial field prefixes and cases where property and setting name differs Fixes a bug in SettingService.SetSetting

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Search.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Search.cshtml
@@ -168,7 +168,7 @@
 {
 	private ViewDataDictionary CreateFacetViewData(string fieldPrefix)
 	{
-		var viewData = new ViewDataDictionary();
+		var viewData = new ViewDataDictionary(ViewData);
 		viewData.TemplateInfo.HtmlFieldPrefix = fieldPrefix;
 		return viewData;
 	}
